@@ -8,6 +8,10 @@ What's New in astroid 4.1.0?
 Release date: TBA
 
 
+* Add ``HTTPMethod`` enum support to brain module for Python 3.11+.
+
+  Closes #4135
+
 
 What's New in astroid 4.0.2?
 ============================
